Changes to be committed: 	modified:   .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,43 @@ spots_info.xlsx
 CA5/CA5_GPT.py
 CA5/CA5_.py
 CA5/__pycache__/CA5_.cpython-311.pyc
+CA5/videos/CA5_120.32586E_23.96824N_24f.mp4
+SuSW_ca5_1.txt
+SuSW_ca5_2.txt
+CA5/videos/CA5_1_B12209039_24f.mp4
+CA5/videos/CA5_1_ck1100887_24f.mp4
+CA5/videos/CA5_1_Cubee_144f.mp4
+CA5/videos/CA5_1_Quark_144f.mp4
+CA5/videos/CA5_1_Sparrow_144f.mp4
+CA5/videos/CA5_1_Vincent_144f.mp4
+CA5/videos/CA5_1_Yushan_144f.mp4
+CA5/videos/CA5_2_Quark_144f.mp4
+CA5/videos/CA5_2_Vincent_24f.mp4
+CA5/Cubee.py
+CA8/videos/0CA8_Quark_144f.mp4
+CA8/videos/0CA8_Taipei_144f.mp4
+CA8/videos/CA8_Quark_12f.mp4
+CA8/videos/CA8_Quark_24f.mp4
+CA8/videos/CA8_Quark_144f.mp4
+CA8/videos/CA8_Sparrow_12f.mp4
+CA8/videos/CA8_Sparrow_24f.mp4
+CA6/videos/CA6_B12209019_24f.mp4
+CA6/videos/CA6_near_Quark_24f.mp4
+CA6/videos/CA6_near_Quark_144f.mp4
+CA6/videos/CA6_Quark_24f.mp4
+CA6/videos/CA6_Quark_144f.mp4
+CA6/videos/CA6_Yushan_144f.mp4
+CA5/videos/CA5_1_Taipei_144f.mp4
+CA5/videos/CA5_2_Gary_24f.mp4
+CA5/videos/CA5_2_Taipei_144f.mp4
+CA7/videos/VVM_Gary_144f.mp4
+CA7/videos/VVM_Quark_144f.mp4
+CA7/videos/VVM_Sparrow_144f.mp4
+CA7/videos/VVM_Taipei_144f.mp4
+CA7/files/120.32586_23.96824.nc
+CA7/files/121.01422_24.82785.nc
+CA7/files/121.51485_25.03766.nc
+CA7/files/121.61328_23.97513.nc
+CA7/files/121.62970_24.14743.nc
+CA6/test.py
+plot_3d_test.py
