Changes to be committed: 	modified:   .gitignore 	modified:   vpy/main/vpy_rolling.py
Changes not staged for commit:
	modified:   vpy/main/vpy_fengame.py
	modified:   vpy/main/vpy_rolling.py

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ CA6/test.py
 plot_3d_test.py
 vpy/vpy_example/GlowScriptDemos_Bounce-Callbacks-VPython.py
 vpy/main/vpy_test.py
+vpy/main/vpy_test copy.py
